==> zhangjinke/WiFi_access_control_system/bsp/stm32f10x/HardWare/RFID/rc522.c <==
#include "global.h"
#include "rc522.h"
#include "string.h"            //字符串操作
#include "spi_bus.h"
#include <drivers/spi.h>
#include <rtthread.h>
#define delay_ns(ms) rt_thread_delay(rt_tick_from_millisecond(1))
#define delay_ms(ms) rt_thread_delay(rt_tick_from_millisecond(ms))

int8_t InitRC522(void)
{
    /* 在SPI2_BUS上附着RC522_IN设备 */
    rc522_attach_device();
    /* 配置门内RFID设备 */
    rt_spi_rc522_in_device = (struct rt_spi_device *) rt_device_find("RFID_IN");//查找RFID_IN设备
    if (rt_spi_rc522_in_device == RT_NULL)
    {
        return -1;
    }

    /* config spi */
    {
        struct rt_spi_configuration cfg;
        cfg.data_width = 8;
        cfg.mode = RT_SPI_MODE_0 | RT_SPI_MSB;
        cfg.max_hz = 10 * 1000 * 1000;
        rt_spi_configure(rt_spi_rc522_in_device, &cfg);
    }
    
    SET_RC522_IN_RST;
    delay_ns(10);
    CLR_RC522_IN_RST;
    delay_ns(10);
    SET_RC522_IN_RST;
    delay_ns(10);

    rt_spi_rc522_device = rt_spi_rc522_in_device;//设置当前RFID设备为门内设备
    PcdReset();             
    PcdAntennaOff();
    delay_ms(2);  
    PcdAntennaOn();
    M500PcdConfigISOType( 'A' );
    /* 配置门外RFID设备 */
    rt_spi_rc522_out_device = (struct rt_spi_device *) rt_device_find("RFID_OUT");//查找RFID_IN设备
    if (rt_spi_rc522_out_device == RT_NULL)
    {
        return -1;
    }

    /* config spi */
    {
        struct rt_spi_configuration cfg;
        cfg.data_width = 8;
        cfg.mode = RT_SPI_MODE_0 | RT_SPI_MSB;
        cfg.max_hz = 10 * 1000 * 1000;
        rt_spi_configure(rt_spi_rc522_out_device, &cfg);
    }

    SET_RC522_OUT_RST;
    delay_ns(10);
    CLR_RC522_OUT_RST;
    delay_ns(10);
    SET_RC522_OUT_RST;
    delay_ns(10);

    rt_spi_rc522_device = rt_spi_rc522_out_device;//设置当前RFID设备为门外设备
    PcdReset();             
    PcdAntennaOff();
    delay_ms(2);  
    PcdAntennaOn();
    M500PcdConfigISOType( 'A' );
    
    return 0;
}

char PcdRequest(uint8_t req_code,uint8_t *pTagType)
{
    char   status;  
    uint8_t   unLen;
    uint8_t   ucComMF522Buf[MAXRLEN]; 

    ClearBitMask(Status2Reg,0x08);
    WriteRawRC(BitFramingReg,0x07);
    SetBitMask(TxControlReg,0x03);
 
    ucComMF522Buf[0] = req_code;

    status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,1,ucComMF522Buf,&unLen);

    if ((status == MI_OK) && (unLen == 0x10))
    {    
        *pTagType     = ucComMF522Buf[0];
        *(pTagType+1) = ucComMF522Buf[1];
    }
    else
    {   status = MI_ERR;   }
   
    return status;
}

char PcdAnticoll(uint8_t *pSnr)
{
    char   status;
    uint8_t   i,snr_check=0;
    uint8_t   unLen;
    uint8_t   ucComMF522Buf[MAXRLEN]; 
    

    ClearBitMask(Status2Reg,0x08);
    WriteRawRC(BitFramingReg,0x00);
    ClearBitMask(CollReg,0x80);
 
    ucComMF522Buf[0] = PICC_ANTICOLL1;
    ucComMF522Buf[1] = 0x20;

    status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,2,ucComMF522Buf,&unLen);

    if (status == MI_OK)
    {
         for (i=0; i<4; i++)
         {   
             *(pSnr+i)  = ucComMF522Buf[i];
             snr_check ^= ucComMF522Buf[i];
         }
         if (snr_check != ucComMF522Buf[i])
         {   status = MI_ERR;    }
    }
    
    SetBitMask(CollReg,0x80);
    return status;
}

char PcdSelect(uint8_t *pSnr)
{
    char   status;
    uint8_t   i;
    uint8_t   unLen;
    uint8_t   ucComMF522Buf[MAXRLEN]; 
    
    ucComMF522Buf[0] = PICC_ANTICOLL1;
    ucComMF522Buf[1] = 0x70;
    ucComMF522Buf[6] = 0;
    for (i=0; i<4; i++)
    {
        ucComMF522Buf[i+2] = *(pSnr+i);
        ucComMF522Buf[6]  ^= *(pSnr+i);
    }
    CalulateCRC(ucComMF522Buf,7,&ucComMF522Buf[7]);
  
    ClearBitMask(Status2Reg,0x08);

    status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,9,ucComMF522Buf,&unLen);
    
    if ((status == MI_OK) && (unLen == 0x18))
    {   status = MI_OK;  }
    else
    {   status = MI_ERR;    }

    return status;
}

char PcdAuthState(uint8_t   auth_mode,uint8_t   addr,uint8_t *pKey,uint8_t *pSnr)
{
    char   status;
    uint8_t   unLen;
    uint8_t   ucComMF522Buf[MAXRLEN]; 

    ucComMF522Buf[0] = auth_mode;
    ucComMF522Buf[1] = addr;
//    for (i=0; i<6; i++)
//    {    ucComMF522Buf[i+2] = *(pKey+i);   }
//    for (i=0; i<6; i++)
//    {    ucComMF522Buf[i+8] = *(pSnr+i);   }
    memcpy(&ucComMF522Buf[2], pKey, 6); 
    memcpy(&ucComMF522Buf[8], pSnr, 4); 
    
    status = PcdComMF522(PCD_AUTHENT,ucComMF522Buf,12,ucComMF522Buf,&unLen);
    if ((status != MI_OK) || (!(ReadRawRC(Status2Reg) & 0x08)))
    {   status = MI_ERR;   }
    
    return status;
}

char PcdRead(uint8_t   addr,uint8_t *p )
{
    char   status;
    uint8_t   unLen;
    uint8_t   i,ucComMF522Buf[MAXRLEN]; 

    ucComMF522Buf[0] = PICC_READ;
    ucComMF522Buf[1] = addr;
    CalulateCRC(ucComMF522Buf,2,&ucComMF522Buf[2]);
   
    status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,4,ucComMF522Buf,&unLen);
    if ((status == MI_OK) && (unLen == 0x90))
 //   {   memcpy(p , ucComMF522Buf, 16);   }
    {
        for (i=0; i<16; i++)
        {    *(p +i) = ucComMF522Buf[i];   }
    }
    else
    {   status = MI_ERR;   }
    
    return status;
}

char PcdWrite(uint8_t   addr,uint8_t *p )
{
    char   status;
    uint8_t   unLen;
    uint8_t   i,ucComMF522Buf[MAXRLEN]; 
    
    ucComMF522Buf[0] = PICC_WRITE;
    ucComMF522Buf[1] = addr;
    CalulateCRC(ucComMF522Buf,2,&ucComMF522Buf[2]);
 
    status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,4,ucComMF522Buf,&unLen);

    if ((status != MI_OK) || (unLen != 4) || ((ucComMF522Buf[0] & 0x0F) != 0x0A))
    {   status = MI_ERR;   }
        
    if (status == MI_OK)
    {
        //memcpy(ucComMF522Buf, p , 16);
        for (i=0; i<16; i++)
        {    
            ucComMF522Buf[i] = *(p +i);   
        }
        CalulateCRC(ucComMF522Buf,16,&ucComMF522Buf[16]);

        status = PcdComMF522(PCD_TRANSCEIVE,ucComMF522Buf,18,ucComMF522Buf,&unLen);
        if ((status != MI_OK) || (unLen != 4) || ((ucComMF522Buf[0] & 0x0F) != 0x0A))
        {   status = MI_ERR;   }
    }
    
    return status;
}

char PcdReset(void)
{
    WriteRawRC(CommandReg,PCD_RESETPHASE);
    WriteRawRC(CommandReg,PCD_RESETPHASE);
    delay_ns(10);
    
    WriteRawRC(ModeReg,0x3D);            //和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL,30);           
    WriteRawRC(TReloadRegH,0);
    WriteRawRC(TModeReg,0x8D);
    WriteRawRC(TPrescalerReg,0x3E);
    
    WriteRawRC(TxAutoReg,0x40);//必须要
   
    return MI_OK;
}

uint8_t ReadRawRC(uint8_t Address)
{
    rc522_writeBuf[0] = ((Address<<1)&0x7E)|0x80;

    rc522_message.send_buf = rc522_writeBuf;
    rc522_message.recv_buf = rc522_readBuf;    //设置读写缓存
    rc522_message.length = 1;            //设置读写长度ReadID
    rc522_message.cs_take = 1;            //开始通信时拉低CS
    rc522_message.cs_release = 0;        //结束通信时不拉高CS
    rc522_message.next = RT_NULL;
    rt_spi_transfer_message(rt_spi_rc522_device, &rc522_message);//进行一次数据传输

    rc522_writeBuf[0] = 0x00;
    rc522_message.cs_release = 1;        //结束通信时拉高CS
    rt_spi_transfer_message(rt_spi_rc522_device, &rc522_message);//进行一次数据传输
    
    return rc522_readBuf[0];
}

void WriteRawRC(uint8_t Address, uint8_t value)
{  
    rc522_writeBuf[0] = ((Address<<1)&0x7E);
    rc522_writeBuf[1] = value;

    rc522_message.send_buf = rc522_writeBuf;
    rc522_message.recv_buf = rc522_readBuf;    //设置读写缓存
    rc522_message.length = 2;            //设置读写长度
    rc522_message.cs_take = 1;            //开始通信时拉低CS
    rc522_message.cs_release = 1;        //结束通信时拉高CS
    rc522_message.next = RT_NULL;
    rt_spi_transfer_message(rt_spi_rc522_device, &rc522_message);//进行一次数据传输
}

char PcdComMF522(uint8_t   Command, 
                 uint8_t *pIn , 
                 uint8_t   InLenByte,
                 uint8_t *pOut , 
                 uint8_t *pOutLenBit)
{
    char   status = MI_ERR;
    uint8_t   irqEn   = 0x00;
    uint8_t   waitFor = 0x00;
    uint8_t   lastBits;
    uint8_t   n;
    uint16_t   i;
    switch (Command)
    {
        case PCD_AUTHENT:
            irqEn   = 0x12;
            waitFor = 0x10;
            break;
        case PCD_TRANSCEIVE:
            irqEn   = 0x77;
            waitFor = 0x30;
            break;
        default:
            break;
    }
   
    WriteRawRC(ComIEnReg,irqEn|0x80);
    ClearBitMask(ComIrqReg,0x80);    //清所有中断位
    WriteRawRC(CommandReg,PCD_IDLE);
    SetBitMask(FIFOLevelReg,0x80);         //清FIFO缓存
    
    for (i=0; i<InLenByte; i++)
    {   WriteRawRC(FIFODataReg, pIn [i]);    }
    WriteRawRC(CommandReg, Command);      
    
    if (Command == PCD_TRANSCEIVE)
    {    SetBitMask(BitFramingReg,0x80);  }     //开始传送
                                             
    i = 256;    //根据时钟频率调整，操作M1卡最大等待时间25ms
    do
    {
        n = ReadRawRC(ComIrqReg);
        i--;
    }
    while ((i!=0) && !(n&0x01) && !(n&waitFor));
    ClearBitMask(BitFramingReg,0x80);

    if (i!=0)
    {    
        if(!(ReadRawRC(ErrorReg)&0x1B))
        {
            status = MI_OK;
            if (n & irqEn & 0x01)
            {   status = MI_NOTAGERR;   }
            if (Command == PCD_TRANSCEIVE)
            {
                   n = ReadRawRC(FIFOLevelReg);
                  lastBits = ReadRawRC(ControlReg) & 0x07;
                if (lastBits)
                {   *pOutLenBit = (n-1)*8 + lastBits;   }
                else
                {   *pOutLenBit = n*8;   }
                if (n == 0)
                {   n = 1;    }
                if (n > MAXRLEN)
                {   n = MAXRLEN;   }
                for (i=0; i<n; i++)
                {   pOut [i] = ReadRawRC(FIFODataReg);    }
            }
        }
        else
        {   status = MI_ERR;   }
        
    }

    SetBitMask(ControlReg,0x80);           // stop timer now
    WriteRawRC(CommandReg,PCD_IDLE); 
    return status;
}
